syntax="proto3";

package go.micro.service.user;
option go_package = "cloud_distributed_storage/Backend/service/account/proto;proto";

service UserService {
  rpc Signup(ReqSignup) returns (ResSignup){}
  rpc Login(ReqLogin) returns (ResLogin){}
  rpc Logout(ReqLogout) returns (ResLogout) {}
  rpc DeleteAccount(ReqDeleteAccount) returns (ResDeleteAccount) {}
  rpc UserInfo(ReqUserInfo) returns (ResUserInfo){}
  rpc UserFiles(ReqUserFiles) returns (ResUserFiles){}
  rpc UserFileRename(ReqUserFileRename) returns (ResUserFileRename){}
}

message ReqSignup{
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message ResSignup{
  int32 code = 1;
  string message = 2;
}


message ReqLogin{
  string username = 1;
  string password = 2;
}

message ResLogin{
  int32 code = 1;
  string message = 2;
  string token = 3;
}

message ReqLogout {
  string token = 1;
}

message ResLogout {
  int32 code = 1;
  string message = 2;
}

message ReqDeleteAccount {
  string username = 1;
  string password = 2;
  string token = 3;
}

message ResDeleteAccount {
  int32 code = 1;
  string message = 2;
}

message ReqUserInfo {
  string username = 1;
}

message ResUserInfo {
  int32 code = 1;
  string message =2;
  string username =3;
  string email = 4;
  string phone = 5;
  string signupAt = 6;
  string lastActiveAt = 7;
  int32 status = 8;
}

message ReqUserFiles {
  string username = 1;
  int32 limit = 2;
}

message ResUserFiles {
  int32 code = 1;
  string message = 2;
  bytes fileData = 3;
}

message ReqUserFileRename {
  string username = 1;
  string filehash = 2;
  string newFileName = 3;
}

message ResUserFileRename {
  int32 code = 1;
  string message = 2;
  bytes fileData = 3;
}