syntax = "proto3";

package go.micro.service.download;
option go_package = "cloud_distributed_storage/Backend/service/download/proto;proto";

service DownloadService {
  // 获取下载入口地址
  rpc DownloadEntry(ReqEntry) returns (RespEntry) {}
}

message ReqEntry {
}

message RespEntry {
  int32 code = 1;
  string message = 2;
  string entry = 3;
}