syntax="proto3";

package go.micro.service.upload;
option go_package = "cloud_distributed_storage/Backend/service/upload/proto;proto";


service UploadService {
  // 获取上传入口地址
  rpc UploadEntry(ReqEntry) returns (ResEntry) {}
}

message ReqEntry {
}

message ResEntry {
  int32 code = 1;
  string message = 2;
  string entry = 3;
}